Migrate adapter health check to support nats transport mdoe